@@ -1,0 +1,22 @@
+/*
+ * Christopher Deckers (chrriis@nextencia.net)
+ * http://www.nextencia.net
+ *
+ * See the file "readme.txt" for information on usage and redistribution of
+ * this file, and for a DISCLAIMER OF ALL WARRANTIES.
+ */
+package chrriis.dj.sweet.components;
+
+
+/**
+ * @author Christopher Deckers
+ */
+public class HTMLEditorAdapter implements HTMLEditorListener {
+
+  public void saveHTML(HTMLEditorSaveEvent e) {
+  }
+
+  public void notifyDirtyStateChanged(HTMLEditorEvent e, boolean isDirty) {
+  }
+
+}
