@@ -8,6 +8,7 @@ Licence terms: LGPL (see licence.txt)
 * Version 0.9.9 (xxxxxxxxxxxxxx):
 
 - Web Browser type and version are accessible.
+- HTML Editor tracks dirty state and can notify listeners.
 - HTML Editor options format is changed (cf demo application for new format).
 - HTML Editor has a CKEditor implementation.
 - Commands can be sent from browser using sendNSCommand JS function.
